# sduwhnews

./: README.MD  pyproject.toml
src/: tgbot.py
src/sduwhnews/: __init__.py  constants.py  news.py
src/sduwhnews/crawlers/: __init__.py  base.py  common.py  news.py  office_of_eduadmin.py  school_of_math_and_stat.py
tests/: setup.py  test_crawlers.py
