[tool.poetry]
name = "sduwhnews"
version = "0.1.0"
description = ""
authors = ["kxxt <rsworktech@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.10.0"
python-telegram-bot = "^13.11"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
validators = "^0.18.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
